# theawesomelunchbot

./: LICENSE.md  Procfile  pyproject.toml
src/: main.py
the_awesome_lunch_bot/: insta_fetcher.py  main.py  skype_handler.py  storage_connect.py
